examples/test/testpolicy15757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15757
  namespace: namespace105
spec:
  podSelector:
    matchLabels:
      key19: value4
      key15: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value46
          key10: value16
      podSelector:
        matchLabels:
          key17: value7
          key8: value6
